<resources>
    <string name="app_name">Github User</string>

    <string name="tab_follower">Followers</string>
    <string name="tab_folowing">Following</string>

    <string name="action_settings">Settings</string>
    <string name="github_user_icon">Github User Icon</string>
    <string name="search_hint">Search Some User</string>
    <string name="username">Username</string>
    <string name="user_image">User Image</string>
    <string name="following_placeholder">9999</string>
    <string name="following">Following</string>
    <string name="follower_placeholder">9999</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <string name="value_placeholder">9999</string>
    <string name="location">Location</string>
    <string name="to_showicon_as_location">To show this user pin as location icon</string>
    <string name="company">Company</string>
    <string name="to_show_building_as_company">to show building as company icon</string>

    <string name="error_m">Oops! Umm...</string>
    <string name="es_massage">Search some user</string>
    <string name="es_title">Oops Its Empty...</string>

    <string name="setting_theme">Theme</string>
    <string name="choose_theme_text">Choose Theme</string>
    <string name="notfound_message">Sorry please search another user</string>
    <string name="not_found">Not Found</string>
    <string name="oopss">Oopss</string>
    <string name="splashicon">Cat image is an App Icon</string>
    <string name="appbar_favorite">Favorite</string>
    <string name="theme_mode">Dark Mode</string>

</resources>