<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MyGithubUser.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@+id/dttoolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/headerCollapsing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="100dp"
                        android:layout_height="88dp"
                        android:layout_width="88dp">
                        <ImageView
                            android:layout_width="88dp"
                            android:layout_height="88dp"
                            tools:src="@tools:sample/avatars"
                            android:contentDescription="@string/user_image"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="250dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="32dp"
                        app:cardBackgroundColor="@color/shark"
                        app:cardCornerRadius="18dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="4dp">

                            <LinearLayout
                                android:id="@+id/viewStars"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repository"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:id="@+id/repository"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/value_placeholder"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/white"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/viewFollowers"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/follower"
                                    android:textSize="15sp"
                                    android:textColor="@color/white"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:id="@+id/txt_follower"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/value_placeholder"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/white"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/viewFollowing"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/following"
                                    android:textSize="15sp"
                                    android:textColor="@color/white"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:id="@+id/txt_following"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/value_placeholder"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/white"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mid_collapsing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/detailUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp"
                        tools:text="@string/username"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/profilecenter">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/company"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@string/to_show_building_as_company" />
                            <TextView
                                android:id="@+id/company"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="@string/company"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <LinearLayout
                            android:paddingTop="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UseCompoundDrawables">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/map_pin"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@string/to_showicon_as_location" />
                            <TextView
                                android:id="@+id/location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="@string/location"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>